missed adding panama_module in module-in-boot-layer test case