@@ -158,6 +158,7 @@ public class TestEnableNativeAccessDynamic {
         list.add("--enable-preview");
         if (panamaModuleInBootLayer) {
             list.addAll(List.of("-p", MODULE_PATH));
+            list.add("--add-modules=panama_module");
             list.add("--enable-native-access=ALL-UNNAMED,panama_module");
         } else {
             list.add("--enable-native-access=ALL-UNNAMED");
